Add test for reading config data from envvars
This fails at the moment. Should be fixed after introducing
builder-style creation of config objects.